Delete incorrect files

--- a/SIRD_model.ipynb
+++ b/SIRD_model.ipynb
@@ -53,13 +53,13 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1410k  100 1410k    0     0   284k      0  0:00:04  0:00:04 --:--:--  377k\n",
+      "100 1410k  100 1410k    0     0  1223k      0  0:00:01  0:00:01 --:--:-- 1222k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 39.8M  100 39.8M    0     0  1386k      0  0:00:29  0:00:29 --:--:-- 1671k\n",
+      "100 39.8M  100 39.8M    0     0  1122k      0  0:00:36  0:00:36 --:--:-- 1065k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  113k  100  113k    0     0  84464      0  0:00:01  0:00:01 --:--:-- 84508\n"
+      "100  113k  100  113k    0     0   257k      0 --:--:-- --:--:-- --:--:--  257k\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "code_folding": [
      0
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "code_folding": [
      0
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "code_folding": []
    },
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "code_folding": [
      0
@@ -2141,18 +2141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "56it [03:50,  4.11s/it]\n"
+      "56it [03:33,  3.82s/it]\n"
      ]
     },
     {
@@ -3211,7 +3209,7 @@
        "0  [0.0, 0.9994784000000001, 1.1094415678365834, ...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3261,7 +3259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "code_folding": []
    },
@@ -3305,7 +3303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "code_folding": [
      0
@@ -3368,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "code_folding": []
    },
@@ -3377,7 +3375,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "46it [02:41,  3.52s/it]\n"
+      "46it [02:48,  3.66s/it]\n"
      ]
     },
     {
@@ -4256,7 +4254,7 @@
        "0  [0.0, 0.99712, 1.1997076204615897, 1.446613458...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
