Add delhi projections

--- a/SIRD_model.ipynb
+++ b/SIRD_model.ipynb
@@ -3259,7 +3259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "code_folding": []
    },
@@ -3303,7 +3303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "code_folding": [
      0
@@ -3366,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "code_folding": []
    },
@@ -3375,7 +3375,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "46it [02:48,  3.66s/it]\n"
+      "46it [03:38,  4.75s/it]\n"
      ]
     },
     {
@@ -4254,7 +4254,7 @@
        "0  [0.0, 0.99712, 1.1997076204615897, 1.446613458...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4273,7 +4273,7 @@
     "                   data=smooth_data_dl,\n",
     "#                    breakpoints=list(range(max_len - 8, max_len + 1, 4)),\n",
     "#                    plot_title=\"Delhi\",\n",
-    "                   base_filename=\"Delhi.json\",\n",
+    "                   base_filename=\"Delhi\",\n",
     "                   breakpoints=range(90, max_len),\n",
     "                   fixed_params={\n",
     "                       \"T_inf\"     : 5.0,\n",
@@ -4293,6 +4293,13 @@
     "                  future_preds=100,\n",
     "                  exclude_params=[\"padded_sd\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
